<resources>
    <string name="app_name">SAY Hi!</string>
    <string name="L">Low</string>
    <string name="M">Medium</string>
    <string name="Q">Quartile</string>
    <string name="H">High</string>
    <string name="m">male</string>
    <string name="m_short">m.</string>
    <string name="f">female</string>
    <string name="f_short">f.</string>
    <string name="basic">Basic</string>
    <string name="Basic">Basic</string>
    <string name="basic_1">1. Basic</string>
    <string name="exact">Exact</string>
    <string name="Exact">Exact</string>
    <string name="exact_2">2. Exact</string>
    <string name="adapt">Adapt</string>
    <string name="Adapt">Adapt</string>
    <string name="adapt_3">3. Adapt</string>
    <string name="tries">Try</string>
    <string name="Tries">Try</string>
    <string name="tries_4">4. Try</string>
    <string name="open">Open</string>
    <string name="Open">Open</string>
    <string name="open_5">5. Open</string>
    <string name="min0">Immediately</string>
    <string name="min1">After 1 minute</string>
    <string name="min5">After 5 minutes</string>
    <string name="min10">After 10 minutes</string>
    <string name="None">None</string>
    <string name="Date">Date</string>
    <string name="Single">Single</string>
    <string name="Family">Family</string>
    <string name="Partner">Partner</string>
    <string name="Wife">Wife</string>
    <string name="Husband">Husband</string>
    <string name="Parent">Parent</string>
    <string name="Father">Father</string>
    <string name="Mother">Mother</string>
    <string name="Child">Child</string>
    <string name="Son">Son</string>
    <string name="Daugther">Daugther</string>
    <string name="Sibling">Sibling</string>
    <string name="Brother">Brother</string>
    <string name="Sister">Sister</string>
    <string name="Grandparent">Grandparent</string>
    <string name="Grandfather">Grandfather</string>
    <string name="Grandmother">Grandmother</string>
    <string name="Grandchild">Grandchild</string>
    <string name="Grandson">Grandson</string>
    <string name="Granddaughter">Granddaughter</string>
    <string name="Relative">Relative</string>
    <string name="Uncle">Uncle</string>
    <string name="Aunt">Aunt</string>
    <string name="Cousins">Cousins</string>
    <string name="Cousin">Cousin (m)</string>
    <string name="Cousine">Cousin (f)</string>
    <string name="Nephew">Nephew</string>
    <string name="Niece">Niece</string>
    <string name="Friend">Friend</string>
    <string name="Boyfriend">Boyfriend</string>
    <string name="Girlfriend">Girlfriend</string>
    <string name="Colleague">Colleague</string>
    <string name="Boss">Boss</string>
    <string name="Manager">Manager</string>
    <string name="Employee">Employee</string>
    <string name="Peer">Peer</string>
    <string name="Other">Other</string>
    <string name="ChooseFromFavorites">Choose from favorites</string>
    <string name="ChooseFromSearch">Choose from search result</string>
    <string name="ChooseFromOwn">Choose from own tags</string>
    <string name="ChooseFromUncategorized">Choose from uncategorized tags</string>
    <string name="ChooseFromCategory">Choose from \'%1$s\'</string>
    <string name="ChooseFromDots">Choose from &#8230;</string>
    <string name="MatchExplanation">The lower match mode of both will be used during matching. Matching mode can be overridden on profile level.</string>
    <string name="MatchForce">Matching mode on profile level is overridden.</string>
    <string name="ActivateMultipleProfiles">Activate multiple profiles.</string>
    <string name="ProvideBirthYear">Provide your year of birth first.</string>
    <string name="ActivateOwnTags">Activate own tags.</string>
    <string name="InviteFriends1">Invite two people first. Send first of two invitations.</string>
    <string name="InviteFriends2">Invite two people first. Send second of two invitations.</string>
    <string name="CameraError">This App needs the front camera to work properly. Allow camera in device settings for the App.</string>
    <string name="MicrophoneError">This App needs the microphone to work properly. Allow microphone in device settings for the App.</string>
    <string name="LocationError">This App can determine your location during matching. To enable this feature, allow location services in device settings for the App.</string>
    <string name="MailNotConfigured">Device is not configured to send mails.</string>
    <string name="MessageNotConfigured">Device is not configured to send messages.</string>
    <string name="ContactMail">contact@sayhi-app.com</string>
    <string name="ContactSubject">SAY Hi! - Feedback &amp; Support (Android)</string>
    <string name="ContactBody">
        <![CDATA[
            <p>Hi!</p>
            <p>
            I have feedback or need help!
            <br>
            <br>
            </p>
            <p>Thanks!</p>
            <p>%1$s</p></string>
    <string name="InviteSubject">Invite to SAY Hi!</string>
    <string name="InviteBody">
        <![CDATA[
            <p>Hi!</p>
            <p>
            I use the app SAY Hi! and I really love it!
            <br>
            If you also get it, we could use it together.
            </p>
            <p>
            You can download the app from here:
            </p>
            <p>
            iOS:
            <br>
            <a href=\'%1$s\'>%2$s</a>
            <p>
            <p>
            Android:
            <br>
            <a href=\'%3$s\'>%4$s</a>
            </p>
            Bye!
            </p>
            <p>%5$s</p>
        ]]>
    </string>
    <string name="InviteMessage">Hi!\nI\'m using SAY Hi!. Loving it.\n\niOS: %1$s\n\nAndroid: %2$s\n\n%3$s"</string>
    <string name="ConfigurationAdjusted">Configuration has been successfully adjusted.</string>
    <string name="SettingsConfiguration">App configuration can be adjusted anytime, accessible via the top left settings icon.</string>
    <string name="NoActiveProfile">No active profile selected.</string>
    <string name="DeleteProfile">Do you really want to delete the profile \'%1$s\'?</string>
    <string name="DeleteMatch">Do you really want to delete the match?</string>
    <string name="DeleteAllMatches">Do you really want to delete all matches?</string>
    <string name="InvalidQR">Last recognized QR Code is not valid for the app.</string>
    <string name="DifferentSpace">Matching in different spaces is not possible. Switch to same space in settings and try again.</string>
    <string name="MatchModeNotOpen">Matching mode is not active on other side.</string>
    <string name="AlreadyMatched">Last QR Code was already successfully matched. Check matching history.</string>
    <string name="QRCodeImageNotAvailable">QR Code is not available with this correction level. Fallback to last available version.</string>
    <string name="QRCodeRecognitionActive">QR Code \nrecognition\nis active</string>
    <string name="QRCodeRecognitionNotActive">QR Code \nrecognition\nis NOT active</string>
    <string name="MatchIsProcessed">Match is currently processed. Please wait a moment.</string>
    <string name="WaitingForOtherSide">Match needs to be confirmed on other side. Keep holding devices front facing to each other.</string>
    <string name="UnexpectedErrorOccurred">An unexpected error occurred. Check network connection or try again later.</string>
    <string name="NoTagsForLanguage">No tags are existing for current selected language. Create new tags or switch to different content language.</string>
    <string name="MisspelledWordsDetected">Name seems to contain misspelled words. Do you want to continue?</string>
    <string name="TagAlreadyExists">Tag \'%1$s\' already exists in category \'%2$s\'.</string>
    <string name="SimilarTagsExist">Similar Tags already exist. How do you want to proceed?</string>
    <string name="CategoryAlreadyExists">Category \'%1$s\' already exists.</string>
    <string name="SimilarCategoriesExist">Similar Categories exist. How do you want to proceed?</string>
    <string name="UseExistingTag">Use Existing</string>
    <string name="UseExistingCategory">Use Existing</string>
    <string name="AppStoreUrlIOS">https://itunes.apple.com/us/app/say-hi/id1224255479?l=de&amp;ls=1&amp;mt=8</string>
    <string name="AppStoreUrlAndroid">https://play.google.com/store/apps/details?id=de.oklemenz.sayhi</string>
    <string name="MatchNum">%1$d Match</string>
    <string name="MatchesNum">%1$d Matches</string>
    <string name="MatchingPointNum">%1$d Matching Point</string>
    <string name="MatchingPointsNum">%1$d Matching Points</string>
    <string name="Pt">(%1$d pt.)</string>
    <string name="Pts">(%1$d pts.)</string>
    <string name="PtPlain">%1$d pt.</string>
    <string name="PtsPlain">%1$d pts.</string>
    <string name="QuestionMark">\?</string>
    <string name="AccessYourData">Access your data</string>
    <string name="ApplicationError">Application Error</string>
    <string name="NavBack">&#8249; Back</string>
    <string name="NavProfiles">&#8249; Profiles</string>
    <string name="NavMatches">&#8249; Matches</string>
    <string name="NavMatch">&#8249; Match</string>
    <string name="NavHi">&#8249; i!</string>
    <string name="NavSettings">&#8249; Settings</string>
    <string name="NavNewTag">&#8249; New Tag</string>
    <string name="Alias">Alias</string>
    <string name="Back">Back</string>
    <string name="Bye">Bye!</string>
    <string name="FirstTimeConfiguration">First-time Configuration</string>
    <string name="Cancel">Cancel</string>
    <string name="CategoryCreation">Category Creation</string>
    <string name="OtherLang">Other&#8230;</string>
    <string name="Test">Test</string>
    <string name="EditMore">Edit → More&#8230;\n • Copy profile\n • Rename profile\n • Set relation type %1$s\n • Override matching mode %2$s</string>
    <string name="English">English</string>
    <string name="German">German</string>
    <string name="SelectCategoryOfTag">Select category of tag</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="CreateNewProfile">Create new profile</string>
    <string name="SelectAlreadyExistingTags">Select from already existing\nsimilar tags, instead \nof creating a new one</string>
    <string name="FirstName">First Name</string>
    <string name="ChooseContentLanguage">Choose your content language.\nIt is used for choosing tags.</string>
    <string name="SelectActiveProfile">Select currently \nactive profile</string>
    <string name="ChooseTheSideAssignment">Choose the side of assignment</string>
    <string name="CreatePrimaryLangTag">Create tag in English\nfor matching reference</string>
    <string name="SelectGender">Select your gender.\nIt influences the matching voice.</string>
    <string name="IgnoreSimilarTags">Ignore similar tags \nand create your own</string>
    <string name="EnterNameOfTag">Enter name of the tag\n(max. 30 characters)</string>
    <string name="MaintainProfile">Display and \nmaintain a profile</string>
    <string name="EnterFirstName">Enter your first name.\nIt is used for matching.</string>
    <string name="YourPersonalMatchingInformation">Your personal \nmatching information</string>
    <string name="MatchingSettings">Matching settings</string>
    <string name="DeviceVibratesOnMatch">Device vibrates \non a match</string>
    <string name="MatchingVoicePlayedOnMatch">Matching voice \nis played \non a match</string>
    <string name="BothQRCodesExchanged">Both QR codes \nmust be exchanged \nduring matching</string>
    <string name="LanguagesMostSpoken">Most spoken languages</string>
    <string name="LanguagesMostContent">Languages, for \nwhich the most \ncontent is available</string>
    <string name="LanguagesAll">All languages \navailable on \nthe device</string>
    <string name="Help">Help</string>
</resources>