<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help"
    style="@style/HelpDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/addNewProfileArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_ur" />

    <TextView
        android:id="@+id/addNewProfileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addNewProfileArrow"
        android:layout_alignEnd="@+id/addNewProfileArrow"
        android:layout_alignTop="@+id/addNewProfileArrow"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="30dp"
        android:text="@string/CreateNewProfile"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/arrowTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_ul" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/arrowTopLeft"
        android:layout_alignStart="@+id/arrowTopLeft"
        android:layout_alignTop="@+id/arrowTopLeft"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/SelectActiveProfile"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/arrowUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="101dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_u" />

    <TextView
        android:id="@+id/maintainProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/arrowUp"
        android:layout_alignEnd="@+id/arrowUp"
        android:layout_alignTop="@+id/arrowUp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="45dp"
        android:gravity="end"
        android:text="@string/MaintainProfile"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/profileEditMore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/maintainProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="start"
        android:text="@string/EditMore"
        android:textColor="@android:color/white" />

</RelativeLayout>