<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help"
    style="@style/HelpDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/selectCategoryArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="-4dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_r" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_toStartOf="@id/selectCategoryArrow"
        android:gravity="end"
        android:text="@string/IgnoreSimilarTags"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/arrowUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_u" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrowUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp"
        android:gravity="center"
        android:text="@string/SelectAlreadyExistingTags"
        android:textColor="@android:color/white" />

</RelativeLayout>