<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help"
    style="@style/HelpDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/assignmentHelpArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_d" />

    <TextView
        android:id="@+id/assignmentHelp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/assignmentHelpArrow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:gravity="center"
        android:text="@string/ChooseTheSideAssignment"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/enterNameArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_l" />

    <TextView
        android:id="@+id/enterNameHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/enterNameArrow"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/enterNameArrow"
        android:text="@string/EnterNameOfTag"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/selectCategoryArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="265dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_r" />

    <TextView
        android:id="@+id/selectCategoryHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/selectCategoryArrow"
        android:layout_marginTop="15dp"
        android:layout_toStartOf="@+id/selectCategoryArrow"
        android:gravity="end"
        android:text="@string/SelectCategoryOfTag"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/primaryRefHelpArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="392dp"
        android:contentDescription="@string/Help"
        android:scaleType="center"
        android:src="@drawable/arrow_r" />

    <TextView
        android:id="@+id/primaryRefHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/primaryRefHelpArrow"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/primaryRefHelpArrow"
        android:gravity="end"
        android:text="@string/CreatePrimaryLangTag"
        android:textColor="@android:color/white" />

</RelativeLayout>