<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/EnterFirstName"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_vertical">

        <ImageButton
            android:id="@+id/setupTestButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:tag="applyColors"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/Test"
            android:onClick="onSetupTestPressed"
            android:src="@drawable/play"/>

        <de.oklemenz.sayhi.view.EditText
            android:id="@+id/setupNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/setupTestButton"
            android:hint="@string/FirstName"
            android:imeOptions="actionDone"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:maxLength="30"
            android:maxLines="1" />

    </RelativeLayout>

</LinearLayout>