<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ChooseContentLanguage"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|center_vertical">

        <Button
            android:id="@+id/setupLanguageOther"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif"
            android:minWidth="0dp"
            android:onClick="onSetupOtherLanguagePressed"
            android:text="@string/OtherLang"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/setupLanguageGerman"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_margin="0dp"
            android:layout_toStartOf="@id/setupLanguageOther"
            android:background="@drawable/segmented_end"
            android:onClick="onSetupGermanLanguagePressed"
            android:padding="0dp"
            android:textAllCaps="false"
            android:textColor="@color/toggle_text_color"
            android:textOff="@string/German"
            android:textOn="@string/German"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/setupLanguageEnglish"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginStart="-1dp"
            android:layout_toStartOf="@id/setupLanguageGerman"
            android:background="@drawable/segmented_start"
            android:checked="true"
            android:onClick="onSetupEnglishLanguagePressed"
            android:textAllCaps="false"
            android:textColor="@color/toggle_text_color"
            android:textOff="@string/English"
            android:textOn="@string/English"
            android:textSize="12sp" />

    </RelativeLayout>
</LinearLayout>