<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help"
    style="@style/HelpDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/arrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Help"
        android:src="@drawable/arrow_d" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/LanguagesMostSpoken"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/arrowUp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/Help"
            android:src="@drawable/arrow_u" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/arrowUp1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/LanguagesMostContent"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/arrowUp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/Help"
            android:src="@drawable/arrow_u" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/arrowUp2"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/LanguagesAll"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>